# PyToTex

./: .gitignore  README.md  makefile  pyproject.toml  requirements.txt
PyToTex/: texhandler.py
tests/: test_filehandling.py  test_writefigure.py  test_writeother.py  test_writetable.py
