[build-system]
requires = [
  "hatchling",
]
build-backend = "hatchling.build"

[project]
name = 'PyToTex'
version = '0.0.1'
authors = [
    {name = 'Daniel Hall', email = 'blankemail@email.com'},
]
description = "Module for writing python data into a tex file"
readme = 'README.md'
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/daplhall/PyToTex"
Issues = "https://github.com/daplhall/PyToTex/issues"